--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -13,15 +13,16 @@
             <div class="flex hidden md:flex space-x-4 pt-[4px] text-[17px]">
                 <li><a href="{% url 'home' %}" class="text-white sm:pr-[60px] hover:text-sky-200">Home</a></li>
                 <li><a href="{% url 'create' %}" class="text-white sm:pr-[60px] hover:text-sky-200">Create</a></li>
-                <li><a href="#" class="text-white sm:pr-[60px] hover:text-sky-200">Edit</a></li>
+                {% comment %} <li><a href="#" class="text-white sm:pr-[60px] hover:text-sky-200">Edit</a></li> {% endcomment %}
                 <li><a href="#" class="text-white sm:pr-[60px] hover:text-sky-200">Delete</a></li>
             </div>
             <div class="flex space-x-4 ml-auto sm:mb-[22px] sm:ml-[0px]">
+                <li class="mt-2"><a href="{% url 'create' %}" class="bg-green-600 text-white px-[10px] py-[5px] rounded hover:bg-green-700 transition md:hidden" >Create</a></li>
                 <li class="pb-[2px] ">
                     <form method="GET" action="" class ="flex space-x-2">
                         <input type="text" placeholder="search.." class="p-2 w-30 h-auto sm:w-auto rounded-lg border-sky-600 bg-sky-900 text-white" name="search">
 
-                        <button type="submit" class="bg-sky-600 hover:bg-sky-700 ml-2  text-white px-7  py-2 rounded-lg w-20 h-auto sm:w-auto">Search</button>
+                        <button type="submit" class="bg-sky-600 hover:bg-sky-700 ml-2  text-white px-5 py-2 rounded-lg w-20 h-auto sm:w-auto">Search</button>
                     </form>
                 </li>
             </div>
@@ -48,7 +49,7 @@
 
                     <a href="{% url 'edit' student.id %}" class="inline-block bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 transition ml-2">Edit</a>
                     <a href="{% url 'delete_student' student.id %}" class="inline-block bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700 transition ml-[60px] mb:ml-[93px]">Delete</a>
-                    <a href="{% url 'create' %}" class="inline-block md:hidden bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition ml-2">Create New</a>
+                    {% comment %} <a href="{% url 'create' %}" class="inline-block md:hidden bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition ml-2">Create New</a> {% endcomment %}
                 </div>
             </div>
         {% endfor %}
